Tracking all files with git

--- a/res/layout/advert_fragment.xml
+++ b/res/layout/advert_fragment.xml
@@ -7,6 +7,7 @@
     <ImageView
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
+        android:scaleType="fitXY"
         android:tag="-1"
         android:id="@+id/ad"/>
 
