--- a/res/layout/ls_list_item.xml
+++ b/res/layout/ls_list_item.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingBottom="10dp"
-                android:paddingTop="10dp"
+                android:padding="15dp"
+                android:background="@drawable/rectangle_shape"
                 android:gravity="left|center">
 
     <ImageView
