Beginning styles for ListViews. Added basic functionality for Conference List.

--- a/res/layout/conference_landing.xml
+++ b/res/layout/conference_landing.xml
@@ -2,12 +2,28 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
+              android:background="#EEEDF2"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+
+    <TextView
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:textSize="20sp"
+        android:textColor="#215260"
+        android:id="@+id/conference_title"/>
 
     <ListView
             android:id="@+id/conference_list_view"
             android:layout_height="fill_parent"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:dividerHeight="15dp"
+            android:divider="@android:color/transparent"
             android:layout_width="fill_parent"/>
 
 </LinearLayout>
