--- a/res/drawable-mdpi/rectangle_shape.xml
+++ b/res/drawable-mdpi/rectangle_shape.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="2dp" android:color="#000000" />
+    <stroke android:width="2dp" android:color="#D3D3D3" />
     <padding android:left="2dp"
              android:top="2dp"
              android:right="2dp"
              android:bottom="2dp" />
-    <corners android:radius="5dp" />
     <solid android:color="#ffffffff" />
 </shape>
