--- a/res/layout/conference_list_row.xml
+++ b/res/layout/conference_list_row.xml
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:layout_width="match_parent"
+              android:padding="15dp"
+              android:background="@drawable/rectangle_shape"
               android:layout_height="match_parent">
+
     <TextView
+        android:layout_gravity="left"
         android:id="@+id/conference_menu_item"
-        android:layout_width="match_parent"
+        android:paddingLeft="10dp"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:textColor="#215260"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <!--ImageView
+            android:layout_gravity="right"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/conference_list_arrow"
+            android:src="@drawable/ls_arrow"/-->
+
 
 </LinearLayout>
