--- a/res/layout/ls_list_item.xml
+++ b/res/layout/ls_list_item.xml
@@ -4,8 +4,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="15dp"
-                android:background="@drawable/rectangle_shape"
-                android:gravity="left|center">
+                android:background="@drawable/rectangle_shape">
 
     <ImageView
             android:layout_centerHorizontal="true"
@@ -13,24 +12,50 @@
             android:layout_width="wrap_content"
             android:id="@+id/ls_image"/>
 
+    <!--ImageView
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ls_arrow"
+            android:src="@drawable/ls_arrow"/-->
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_centerVertical="true"
+        android:layout_width="match_parent"
+        android:id="@+id/ls_body_layout"
+        android:layout_height="wrap_content">
     <TextView
-            android:layout_centerInParent="true"
+        android:id="@+id/ls_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#A8A8A8"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:textSize="17sp"
+        android:layout_gravity="center_horizontal"
+        />
+    <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:layout_below="@id/ls_image"
-            android:textSize="20sp"
-            android:textColor="#000000"
-            android:paddingBottom="10dp"
+            android:textSize="17sp"
+            android:textColor="#215260"
+            android:paddingLeft="10dp"
+            android:textStyle="bold"
+            android:paddingRight="10dp"
+            android:paddingBottom="5dp"
             android:id="@+id/ls_headline"/>
 
     <TextView
-            android:layout_centerHorizontal="false"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:textColor="#000000"
-            android:layout_below="@id/ls_headline"
+            android:textColor="#A8A8A8"
+            android:textSize="17sp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:id="@+id/ls_desc"/>
+    </LinearLayout>
+
 
 </RelativeLayout>
