--- a/res/layout/conference_landing.xml
+++ b/res/layout/conference_landing.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:background="#EEEDF2"
               android:layout_width="match_parent"
@@ -16,6 +16,7 @@
         android:id="@+id/conference_title"/>
 
     <ListView
+            android:layout_below="@id/conference_title"
             android:id="@+id/conference_list_view"
             android:layout_height="fill_parent"
             android:paddingLeft="30dp"
@@ -26,4 +27,11 @@
             android:divider="@android:color/transparent"
             android:layout_width="fill_parent"/>
 
-</LinearLayout>
+    <fragment class="com.cellaflora.iact.AdvertFragment"
+              android:id="@+id/advert_banner"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_alignParentBottom="true"
+            />
+
+</RelativeLayout>
