--- a/res/layout/conference_schedule.xml
+++ b/res/layout/conference_schedule.xml
@@ -1,45 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:background="#EDEEF2"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
     <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <RelativeLayout
+        android:id="@+id/schedule_nav_layout"
         android:background="#ffffff"
         android:layout_width="match_parent"
         android:layout_marginBottom="5dp"
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/schedule_prev_day"
-            android:layout_height="40dp"
+            android:layout_height="30dp"
+            android:layout_margin="10dp"
             android:src="@drawable/ls_arrow_left"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
-            android:layout_width="40dp"/>
+            android:layout_width="30dp"/>
         <TextView
             android:id="@+id/schedule_current_day"
             android:layout_centerInParent="true"
             android:textStyle="bold"
             android:textSize="20sp"
+            android:textColor="#999999"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"/>
         <ImageView
                 android:id="@+id/schedule_next_day"
+                android:layout_margin="10dp"
                 android:layout_centerVertical="true"
                 android:src="@drawable/ls_arrow_right"
                 android:layout_alignParentRight="true"
-                android:layout_height="40dp"
-                android:layout_width="40dp"/>
+                android:layout_height="30dp"
+                android:layout_width="30dp"/>
 
         </RelativeLayout>
 
-
     <android.support.v4.view.ViewPager
+            android:layout_below="@id/schedule_nav_layout"
             android:id="@+id/schedule_pager"
             android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_marginBottom="10dp"
-            android:layout_weight="9"/>
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"/>
+        </RelativeLayout>
 
-</LinearLayout>
+
+</RelativeLayout>
