--- a/res/layout/conference_schedule_list_row.xml
+++ b/res/layout/conference_schedule_list_row.xml
@@ -20,12 +20,19 @@
             android:layout_marginBottom="5dp"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:textColor="#888888"/>
+            android:textColor="#e84d3d"/>
+
+    <TextView
+            android:id="@+id/schedule_event_locaton"
+            android:layout_marginBottom="5dp"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:textColor="#999999"/>
 
     <TextView
             android:id="@+id/schedule_event_description"
             android:ellipsize="end"
-            android:maxLines="5"
+            android:maxLines="3"
             android:textStyle="bold"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
