--- a/res/layout-land/web_content_activity.xml
+++ b/res/layout-land/web_content_activity.xml
@@ -5,9 +5,47 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <LinearLayout
+            android:id="@+id/web_bottom_layout"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_height="wrap_content">
+
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                        android:orientation="horizontal"
+                        android:id="@+id/web_controller"
+                        android:visibility="gone"
+                        android:layout_width="match_parent"
+                        android:background="@drawable/iact_nav_bar"
+                        android:layout_height="75dp">
+            <ImageView
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:id="@+id/web_controller_back"
+                    android:padding="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_height="60dp"
+                    android:layout_width="60dp"
+                    android:src="@drawable/web_back"/>
+
+            <ImageView
+                    android:layout_centerInParent="true"
+                    android:id="@+id/web_controller_refresh_stop"
+                    android:layout_height="60dp"
+                    android:padding="10dp"
+                    android:layout_width="60dp"
+                    android:src="@drawable/web_stop"/>
+
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
     <WebView
         android:layout_height="fill_parent"
         android:layout_width="fill_parent"
+        android:layout_above="@id/web_bottom_layout"
         android:id="@+id/web_view"/>
 
 </RelativeLayout>
