--- a/res/layout/conference_event_detail.xml
+++ b/res/layout/conference_event_detail.xml
@@ -1,72 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+
+    <fragment class="com.cellaflora.iact.AdvertFragment"
+              android:id="@+id/advert_banner"
+              android:layout_alignParentBottom="true"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+            />
+
+    <RelativeLayout
+        android:orientation="vertical"
+        android:id="@+id/schedule_event_detail_bottom_layout"
+        android:layout_width="match_parent"
+        android:layout_above="@id/advert_banner"
+        android:layout_height="75dp">
+
+        <RelativeLayout
+
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:background="@drawable/iact_nav_bar">
+
+            <ImageView
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_margin="15dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:id="@+id/schedule_detail_event_action_image"/>
+        <TextView
+            android:id="@+id/schedule_detail_event_action"
+            android:layout_width="wrap_content"
+            android:textColor="#ffffff"
+            android:textSize="25sp"
+            android:layout_centerInParent="true"
+            android:layout_height="wrap_content"
+            />
+
+        </RelativeLayout>
+    </RelativeLayout>
+
+
     <ScrollView
         android:padding="15dp"
-        android:background="#ffffffff"
+        android:layout_above="@id/schedule_event_detail_bottom_layout"
+        android:background="#E0E0E0"
         android:layout_height="match_parent"
         android:layout_width="match_parent">
         <LinearLayout
             android:orientation="vertical"
-            android:background="#ffffffff"
+            android:background="#E0E0E0"
             android:layout_height="wrap_content"
             android:layout_width="match_parent">
         <TextView
             android:id="@+id/schedule_detail_event_title"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:textStyle="bold"
+            android:textSize="20sp"
             android:textColor="#225161">
         </TextView>
 
         <TextView
                 android:id="@+id/schedule_detail_event_time"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="10dp"
+                android:textSize="18sp"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:textColor="#888888"/>
+                android:textColor="#e84d3d"/>
+
+            <TextView
+                    android:id="@+id/schedule_detail_event_location"
+                    android:layout_marginBottom="10dp"
+                    android:textSize="18sp"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:textColor="#225161"/>
+
+            <TextView
+                    android:id="@+id/schedule_detail_event_speakers"
+                    android:layout_marginBottom="15dp"
+                    android:textSize="18sp"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:textColor="#225161"/>
         <TextView
+                android:layout_margin="10dp"
                 android:id="@+id/schedule_detail_event_description"
-                android:textStyle="bold"
+                android:textSize="18sp"
+                android:padding="10dp"
+                android:background="@drawable/rectangle_shape"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:textColor="#999999"/>
-
-        <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:background="#D9D9D9"/>
-
-        <LinearLayout
-                android:layout_gravity="center"
-                android:orientation="horizontal"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent">
-            <ImageView
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:layout_height="36dp"
-                    android:layout_width="36dp"
-                    android:padding="10dp"
-                    android:id="@+id/schedule_detail_event_action_image"/>
-
-            <TextView
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:id="@+id/schedule_detail_event_action"
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:textColor="#D9D9D9"/>
-        </LinearLayout>
         </LinearLayout>
 
         </ScrollView>
 
-</LinearLayout>
+</RelativeLayout>
