--- a/res/drawable-mdpi/rectangle_shape.xml
+++ b/res/drawable-mdpi/rectangle_shape.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="2dp" android:color="#D3D3D3" />
-    <padding android:left="2dp"
-             android:top="2dp"
-             android:right="2dp"
-             android:bottom="2dp" />
-    <solid android:color="#ffffffff" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+<item>
+    <shape
+            android:shape="rectangle">
+        <stroke android:width="3dp" android:color="#B8B8B8" />
+        <solid android:color="#FFDDDDDD" />
+
+    </shape>
+</item>
+
+<item android:right="3dp" android:bottom="3dp">
+    <shape
+            android:shape="rectangle">
+        <stroke android:width="2dp" android:color="#ffffff" />
+        <solid android:color="#ffffff" />
+    </shape>
+</item>
+
+</layer-list>
