--- a/res/layout/conference_landing.xml
+++ b/res/layout/conference_landing.xml
@@ -2,7 +2,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:background="#EEEDF2"
+              android:background="@drawable/conf_background"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
@@ -12,18 +12,19 @@
         android:layout_height="wrap_content"
         android:padding="15dp"
         android:textSize="20sp"
-        android:textColor="#215260"
+        android:textColor="#225162"
         android:id="@+id/conference_title"/>
 
     <ListView
             android:layout_below="@id/conference_title"
             android:id="@+id/conference_list_view"
             android:layout_height="fill_parent"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:dividerHeight="15dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:clipToPadding="false"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:dividerHeight="10dp"
             android:divider="@android:color/transparent"
             android:layout_width="fill_parent"/>
 
