--- a/res/layout/conference_schedule.xml
+++ b/res/layout/conference_schedule.xml
@@ -27,7 +27,7 @@
             android:layout_centerInParent="true"
             android:textStyle="bold"
             android:textSize="20sp"
-            android:textColor="#999999"
+            android:textColor="#c6c7c7"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"/>
         <ImageView
