--- a/res/layout/conference_schedule_list_row.xml
+++ b/res/layout/conference_schedule_list_row.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:textStyle="bold"
-        android:textColor="#225161"/>
+        android:textColor="#225162"/>
 
     <TextView
             android:id="@+id/schedule_event_time"
@@ -27,7 +27,7 @@
             android:layout_marginBottom="5dp"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:textColor="#999999"/>
+            android:textColor="#a7a7a7"/>
 
     <TextView
             android:id="@+id/schedule_event_description"
@@ -36,7 +36,7 @@
             android:textStyle="bold"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:textColor="#999999"/>
+            android:textColor="#a7a7a7"/>
 
     <View
             android:layout_width="fill_parent"
@@ -65,7 +65,7 @@
             android:id="@+id/schedule_event_action"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:textColor="#D9D9D9"/>
+            android:textColor="#a7a7a7"/>
     </LinearLayout>
 
 
