--- a/res/layout/ls_list_item.xml
+++ b/res/layout/ls_list_item.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:background="@drawable/rectangle_shape">
     <ImageView
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
+            android:layout_alignParentLeft="true"
             android:src="@drawable/alert"
             android:visibility="gone"
             android:layout_width="wrap_content"
@@ -16,7 +16,6 @@
     <LinearLayout
         android:layout_gravity="center"
         android:orientation="vertical"
-        android:layout_weight="0.9"
         android:padding="15dp"
         android:layout_width="match_parent"
         android:id="@+id/ls_body_layout"
@@ -26,7 +25,7 @@
         android:id="@+id/ls_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#A8A8A8"
+        android:textColor="#bdbdbd"
         android:layout_marginTop="10dp"
         android:paddingBottom="10dp"
         android:textSize="17sp"
@@ -35,6 +34,7 @@
 
         <ImageView
                 android:layout_gravity="center"
+                android:visibility="visible"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/rectangle_shape"
                 android:layout_height="wrap_content"
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:textSize="17sp"
-            android:textColor="#215260"
+            android:textColor="#225162"
             android:paddingLeft="10dp"
             android:textStyle="bold"
             android:paddingRight="10dp"
@@ -55,7 +55,7 @@
     <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:textColor="#A8A8A8"
+            android:textColor="#999999"
             android:textSize="17sp"
             android:maxLines="4"
             android:ellipsize="end"
@@ -65,13 +65,13 @@
     </LinearLayout>
 
     <ImageView
-            android:layout_gravity="center_vertical"
-            android:layout_weight="0.1"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ls_arrow_right"/>
 
 
-</LinearLayout>
+</RelativeLayout>
