--- a/res/layout/titlebar.xml
+++ b/res/layout/titlebar.xml
@@ -27,7 +27,7 @@
         android:scaleType="centerInside"
         android:layout_centerVertical="true"
         android:layout_centerInParent="true"
-        android:src="@drawable/branding"/>
+        android:src="@drawable/iact_branding"/>
 
     <LinearLayout
             android:padding="5dp"
