--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -23,9 +23,9 @@
 <ImageView
     android:id="@+id/about_image"
     android:layout_centerInParent="true"
-    android:scaleType="centerInside"
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
+    android:scaleType="fitXY"
+    android:layout_height="150dp"
+    android:layout_width="175dp"
     android:visibility="gone"
     android:src="@drawable/iact_logo"/>
 
