--- a/res/layout/ls_list_item.xml
+++ b/res/layout/ls_list_item.xml
@@ -6,11 +6,11 @@
                 android:orientation="horizontal"
                 android:background="@drawable/rectangle_shape">
     <ImageView
-            android:layout_height="wrap_content"
+            android:layout_height="56dp"
             android:layout_alignParentLeft="true"
             android:src="@drawable/alert"
             android:visibility="gone"
-            android:layout_width="wrap_content"
+            android:layout_width="56dp"
             android:id="@+id/ls_alert"/>
 
     <LinearLayout
@@ -69,8 +69,8 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="10dp"
+            android:layout_height="18dp"
             android:src="@drawable/ls_arrow_right"/>
 
 
