--- a/res/layout/menu_list_item.xml
+++ b/res/layout/menu_list_item.xml
@@ -6,11 +6,12 @@
               android:layout_height="match_parent"
               android:background="@drawable/rectangle_shape"
               android:paddingLeft="20dp"
-              android:paddingTop="15dp"
-              android:paddingBottom="15dp">
+              android:paddingTop="20dp"
+              android:paddingBottom="20dp">
 
     <TextView
         android:textColor="#225162"
+        android:gravity="center_vertical"
         android:layout_height="match_parent"
         android:layout_width="wrap_content"
         android:textSize="16sp"
@@ -21,9 +22,9 @@
             android:layout_gravity="right"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_width="13dp"
+            android:layout_width="10dp"
             android:layout_weight="0.1"
-            android:layout_height="24dp"
+            android:layout_height="18dp"
             android:src="@drawable/ls_arrow_right"
             android:id="@+id/menu_item_image"/>
 
