--- a/res/layout/titlebar.xml
+++ b/res/layout/titlebar.xml
@@ -19,8 +19,8 @@
                  android:layout_alignParentLeft="true"/>
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="107dp"
+        android:layout_height="24dp"
         android:focusable="false"
         android:clickable="false"
         android:id="@+id/menubar_logo"
