--- a/res/layout/menu_list_item.xml
+++ b/res/layout/menu_list_item.xml
@@ -6,13 +6,13 @@
               android:layout_height="match_parent"
               android:background="@drawable/rectangle_shape"
               android:paddingLeft="20dp"
-              android:paddingTop="20dp"
-              android:paddingBottom="20dp">
+              android:paddingTop="15dp"
+              android:paddingBottom="15dp">
 
     <TextView
         android:textColor="#225162"
         android:gravity="center_vertical"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:textSize="16sp"
         android:layout_weight="0.9"
