--- a/res/layout/advert_fragment.xml
+++ b/res/layout/advert_fragment.xml
@@ -2,12 +2,12 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content">
     <ImageView
         android:layout_height="wrap_content"
-        android:layout_width="fill_parent"
-        android:scaleType="fitXY"
+        android:layout_width="wrap_content"
+        android:scaleType="centerInside"
         android:tag="-1"
         android:id="@+id/ad"/>
 
