--- a/res/layout/conference_landing.xml
+++ b/res/layout/conference_landing.xml
@@ -2,10 +2,22 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:background="@drawable/conf_background"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <fragment class="com.cellaflora.iact.AdvertFragment"
+              android:id="@+id/advert_banner"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_alignParentBottom="true"
+            />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:background="@drawable/conf_background"
+        android:layout_above="@id/advert_banner">
     <TextView
         android:gravity="center_horizontal"
         android:layout_width="match_parent"
@@ -27,12 +39,8 @@
             android:dividerHeight="10dp"
             android:divider="@android:color/transparent"
             android:layout_width="fill_parent"/>
+    </LinearLayout>
 
-    <fragment class="com.cellaflora.iact.AdvertFragment"
-              android:id="@+id/advert_banner"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_alignParentBottom="true"
-            />
+
 
 </RelativeLayout>
