--- a/res/layout/legislative_summary_activity.xml
+++ b/res/layout/legislative_summary_activity.xml
@@ -11,7 +11,7 @@
               android:id="@+id/advert_banner"
               android:layout_centerHorizontal="true"
               android:layout_alignParentBottom="true"
-              android:layout_width="wrap_content"
+              android:layout_width="match_parent"
               android:layout_height="wrap_content"
             />
 
