--- a/res/layout/advert_fragment.xml
+++ b/res/layout/advert_fragment.xml
@@ -2,13 +2,14 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
+              android:background="@android:color/transparent"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
     <ImageView
         android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:scaleType="fitXY"
+        android:scaleType="centerInside"
         android:tag="-1"
         android:id="@+id/ad"/>
 
